unpackaged/objects/copado__Static_Code_Analysis_Result__c.object
<CustomObject>
	<description>This object stores the results of Static Code Analysis executed through Copado.</description>
	<fields>
		<fullName>copado__Blocker__c</fullName>
		<description>Number of Blocker violations</description>
		<label>Blocker</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Severity__c</field>
			<operation>equals</operation>
			<value>Blocker</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Bugs__c</fullName>
		<description>CodeScan Bugs in violations</description>
		<label>Bugs</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Type__c</field>
			<operation>equals</operation>
			<value>Bug</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Closed__c</fullName>
		<label>Closed</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>equals</operation>
			<value>Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Code_Smells__c</fullName>
		<description>Number of Code Smell violations</description>
		<label>Code Smells</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Type__c</field>
			<operation>equals</operation>
			<value>Code Smell</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Confirmed__c</fullName>
		<label>Confirmed</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>equals</operation>
			<value>Confirmed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Critical__c</fullName>
		<description>Number of Critical violations</description>
		<label>Critical</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Severity__c</field>
			<operation>equals</operation>
			<value>Critical</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Deployment_Step__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Deployment Step</label>
		<referenceTo>copado__Step__c</referenceTo>
		<relationshipLabel>Static Code Analysis Results</relationshipLabel>
		<relationshipName>Static_Code_Analysis_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Details__c</fullName>
		<label>Details</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__False_Positive__c</fullName>
		<label>False Positive</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>equals</operation>
			<value>False Positive</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Fixed__c</fullName>
		<label>Fixed</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>equals</operation>
			<value>Fixed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Highest_Priority_Violation__c</fullName>
		<label>Highest Priority Violation</label>
		<summarizedField>copado__Static_Code_Analysis_Violation__c.copado__Priority__c</summarizedField>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>min</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Info__c</fullName>
		<description>Number of Info violations</description>
		<label>Info</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Severity__c</field>
			<operation>equals</operation>
			<value>Info</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Major__c</fullName>
		<description>Number of Major violations</description>
		<label>Major</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Severity__c</field>
			<operation>equals</operation>
			<value>Major</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Minor__c</fullName>
		<description>Number of Minor violations</description>
		<label>Minor</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Severity__c</field>
			<operation>equals</operation>
			<value>Minor</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Number_of_Violations__c</fullName>
		<description>Overall number of rule violations.</description>
		<label>Number of Violations</label>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Open__c</fullName>
		<label>Open</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>equals</operation>
			<value>Open</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Static Code Analysis Results</relationshipLabel>
		<relationshipName>Static_Code_Analysis_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Removed__c</fullName>
		<label>Removed</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>equals</operation>
			<value>Removed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Reopened__c</fullName>
		<label>Reopened</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>equals</operation>
			<value>Reopened</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Resolved__c</fullName>
		<label>Resolved</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>equals</operation>
			<value>Resolved</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Score_v11__c</fullName>
		<description>New v11 version of the Score field.</description>
		<label>Score</label>
		<summarizedField>copado__Static_Code_Analysis_Violation__c.copado__Score__c</summarizedField>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Unresolved__c</fullName>
		<label>Unresolved</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>notEqual</operation>
			<value>Fixed</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>notEqual</operation>
			<value>False Positive</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>notEqual</operation>
			<value>Won&apos;t fix</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>notEqual</operation>
			<value>Removed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Static Code Analysis Results</relationshipLabel>
		<relationshipName>Static_Code_Analysis_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Vulnerabilities__c</fullName>
		<description>CodeScan Vulnerability violations</description>
		<label>Vulnerabilities</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Type__c</field>
			<operation>equals</operation>
			<value>Vulnerability</value>
		</summaryFilterItems>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Status__c</field>
			<operation>notEqual</operation>
			<value>Resolved, Closed</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Wont_fix__c</fullName>
		<label>Won&apos;t fix</label>
		<summaryFilterItems>
			<field>copado__Static_Code_Analysis_Violation__c.copado__Resolution__c</field>
			<operation>equals</operation>
			<value>Won&apos;t fix</value>
		</summaryFilterItems>
		<summaryForeignKey>copado__Static_Code_Analysis_Violation__c.copado__Static_Code_Analysis_Result__c</summaryForeignKey>
		<summaryOperation>count</summaryOperation>
		<type>Summary</type>
	</fields>
	<label>Static Code Analysis Result</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Number_of_Violations__c</columns>
		<columns>copado__Score_v11__c</columns>
		<columns>copado__User_Story__c</columns>
		<columns>copado__Org_Credential__c</columns>
		<columns>copado__Deployment_Step__c</columns>
		<columns>LAST_UPDATE</columns>
		<columns>UPDATEDBY_USER</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>SCA-{00000}</displayFormat>
		<label>Static Code Analysis Result Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Static Code Analysis Results</pluralLabel>
	<recordTypes>
		<fullName>copado__CodeScan</fullName>
		<active>true</active>
		<description>Record Type for CodeScan integration. Requires CodeScan licensing.</description>
		<label>CodeScan</label>
	</recordTypes>
	<recordTypes>
		<fullName>copado__PMD</fullName>
		<active>true</active>
		<description>Record Type for free of charge PMD integration</description>
		<label>PMD</label>
	</recordTypes>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>